--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 
   			<div class="description-of-self">
 
-  				<div class="profile-picture">
+  				<div class="profile-picture"> <!-- start of profile-picture-->
   					<img  alt="It's me - Deepthi" src="images/profile_pic.jpg">
   				</div><!--end of profile-picture-->
 
-  				<div class="about-content">
+  				<div class="about-content"><!-- start of about-content-->
   					
   					<h1><span>H</span>i&excl; I'm <span>D</span>eepth&jfr; Kastur&ifr;</h1>
   					<h3><span>A</span> deligent and enthusiastic engineer in thirst of exploring creative and smart ways at work.</h3>
   					<p> I'm also a bibliophile, an aspiring writer and an amateur violinist &#9834; dwelling in beautiful India.<p>
 
-  				</div> <!-- end of content about-->
+  				</div> <!-- end of about-content-->
 
                 <div class="block-quote"><!-- start of block-quote -->
   					<blockquote>
