--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   	<meta http-equiv="Content-Type"  content="text/html; charset=UTF-8">
   	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
   	<title>Deepthi's portfolio</title>
-  	<link rel="stylesheet" media="screen" href="screen.css">
+  	<link rel="stylesheet" media="all" href="index.css">
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body> 
@@ -41,7 +41,7 @@
 
   				<div class="about-content"><!-- start of about-content-->
   					
-  					<h1><span>H</span>i&excl; I'm <span>D</span>eepth&jfr; Kastur&ifr;</h1>
+  					<h1><span>H</span>i! I'm <span>D</span>eepthi Kasturi</h1>
   					<h3><span>A</span> deligent and enthusiastic engineer in thirst of exploring creative and smart ways at work.</h3>
   					<p> I'm also a bibliophile, an aspiring writer and an amateur violinist &#9834; dwelling in beautiful India.<p>
 
@@ -159,7 +159,7 @@
   			<a class="fb" href="https://www.facebook.com/profile.php?id=100009908206243" ></a>
   			<a class="linkedin" href="https://www.linkedin.com/in/deepthi-kasturi-5a229588/" ></a>
   			<a class="insta" href="https://www.instagram.com/deepthikasturi/?hl=en" ></a>
-  			<a class="git" href="" ></a>
+  			<a class="git" href="https://github.com/Deepthi-Bhargavi-Kasturi" ></a>
   		</footer>
 
 
